# cpp-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  interface.hpp  main.cpp
include/bookshelf/: bookshelf-core.hpp
include/clock/: clock-core.hpp
include/my-example-project/: mylib.hpp
include/myproject/: base.hpp
src/: CMakeLists.txt  main.cpp  mylib.cpp  private-lib.cpp  private-lib.hpp
test/: CMakeLists.txt  tests.cpp  unit-tests.cpp
tools/: CMakeLists.txt  my-tool.cpp
unit-tests/: CMakeLists.txt  unit-tests.cpp
